objects/ScCollection_Recovery__c.object
<CustomObject>
    <description>Used for storing recovery information on the PL Contract</description>
    <fields>
        <fullName>Agent_Instructions__c</fullName>
        <label>Agent Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Owing_at_time_of_Sale__c</fullName>
        <label>Amount Owing at time of Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auction_Costs__c</fullName>
        <label>Auction Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Customer_DoB__c</fullName>
        <formula>ScCollection_Contract__r.Customer_Birthdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Customer DoB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Redemption__c</fullName>
        <label>Date of Redemption</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Rebate_Amount__c</fullName>
        <label>Insurance Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>Repossession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Call/Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Call Collect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip Trace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cartage Request</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Review__c</fullName>
        <label>Legal Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Possible_Redemption__c</fullName>
        <label>Possible Redemption</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reserve_Amount__c</fullName>
        <label>Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Agent_Appointed__c</fullName>
        <label>Agent Appointed</label>
        <picklist>
            <picklistValues>
                <fullName>Access Mercantile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Investigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procol Recoveries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott&apos;s Mercantile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pickles Auctions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Agent_Close_Date__c</fullName>
        <label>Agent Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_App_for_Substituted_Service__c</fullName>
        <label>Application for Substituted Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Auction_Date__c</fullName>
        <label>Auction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Auction_House__c</fullName>
        <label>Auction House</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Borrower_Shortfall__c</fullName>
        <label>Borrower Shortfall</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Claim_Lodged_Date__c</fullName>
        <label>Claim Lodged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contract_Name__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
	NOT( ISBLANK(  ScCollection_Contract__c  ) ) 
	, 
		IF(
			ScCollection_Contract__r.ScCollection_Source_System_Name__c == &quot;MORTGAGE&quot;
		,
			left( ScCollection_Contract__r.Name ,find(&apos;_&apos;, ScCollection_Contract__r.Name)-1)
		,
			ScCollection_Contract__r.Name
		)
	, 
	&quot;&quot; 
)</formula>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this would tag the contract with recovery</description>
        <label>Contract</label>
        <referenceTo>collect__Loan_Account__c</referenceTo>
        <relationshipLabel>Recoveries</relationshipLabel>
        <relationshipName>Recoveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Country_Code__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
 NOT(ISBLANK(  ScCollection_Contract__c  ))  
, 
 ScCollection_Contract__r.ScCollection_Country_Code__c 
, 
&quot;&quot; 
)</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Date_Appointed__c</fullName>
        <label>Date Appointed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Default_Notice_Expired__c</fullName>
        <label>Default Notice Expired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Default_Notice_Issued__c</fullName>
        <label>Default Notice Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Default_Notice_Requested__c</fullName>
        <label>Default Notice Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Default_Notice_Served__c</fullName>
        <label>Default Notice Served</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Defence_Lodged__c</fullName>
        <label>Defence Lodged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Eviction_Scheduled__c</fullName>
        <label>Eviction Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Eviction_Stayed__c</fullName>
        <label>Eviction Stayed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_External_Id__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
 AND(NOT(ISBLANK(  ScCollection_Contract__c  )),OR( ScCollection_Contract__r.ScCollection_Source_System_Name__c == &quot;MORTGAGE&quot;, ScCollection_Contract__r.ScCollection_Source_System_Name__c == &quot;PAF&quot; ))  
, 
 ScCollection_Contract__r.collect__External_ID__c  
, 
&quot;&quot; 
)</formula>
        <label>External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Final_Notice_Issued_Date__c</fullName>
        <label>Final Notice Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Form_14_Expiry_Date__c</fullName>
        <label>Form-14 Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Form_14_Issue_Date__c</fullName>
        <label>Form-14 Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Judgement_Expiry_Date__c</fullName>
        <label>Judgement Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Judgement_Obtained__c</fullName>
        <label>Judgement Obtained</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Judgement_Requested__c</fullName>
        <label>Judgement Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_LOB_Identifier__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
NOT( ISBLANK(  ScCollection_Contract__c  ) ) 
, 
 ScCollection_Contract__r.ScCollection_Source_System_Name__c 
, 
&quot;&quot; 
)</formula>
        <label>LOB Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_LOD_Requested__c</fullName>
        <label>LOD Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_LTV__c</fullName>
        <label>LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Legal_Action_Cancelled__c</fullName>
        <label>Legal Action Cancelled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_MIP_Shortfall_Amount__c</fullName>
        <label>MIP Shortfall Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Payment_Received_Claim__c</fullName>
        <label>Payment Received - Claim</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Possession_Obtained__c</fullName>
        <label>Possession Obtained</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_PropertyPresenterInstructed__c</fullName>
        <label>Property Presenter Instructed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Property_Handed_Back__c</fullName>
        <label>Property Handed Back</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Property_Passed_In_OnMarket__c</fullName>
        <label>Property Passed In On Market</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Property_Sold_Date__c</fullName>
        <label>Property Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Property_Surrogate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Security</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ScCollection_Contract__c</field>
                <operation>equals</operation>
                <valueField>Property_Surrogate__c.Loan_Surrogate__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Property_Surrogate__c</referenceTo>
        <relationshipLabel>Recoveries</relationshipLabel>
        <relationshipName>Recoveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScCollection_Property_Under_Tender__c</fullName>
        <label>Property Under Tender</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Provision_Amount__c</fullName>
        <label>Provision Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Provision_Date__c</fullName>
        <label>Provision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Provision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ScCollection_Real_Estate_Agent__c</fullName>
        <label>Real Estate Agent</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Reason_for_Agent_Closure__c</fullName>
        <label>Reason for Agent Closure</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repossessed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access Mercantile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GM Investigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procol Recoveries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott’s Mercantile</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Recovery_Fees__c</fullName>
        <label>Agent Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Redemption_Days__c</fullName>
        <label>Redemption Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScCollection_Release_of_Asset__c</fullName>
        <label>Release of Asset</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Repossession_Date__c</fullName>
        <label>Repossession Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_SOC_Requested__c</fullName>
        <label>SOC Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_SOC_Served__c</fullName>
        <label>SOC Served</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Sale_Amount__c</fullName>
        <label>Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Sale_Proceeds_Date__c</fullName>
        <label>Sale Proceeds Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Sale_Proceeds__c</fullName>
        <label>Sale Proceeds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Settlement_Date__c</fullName>
        <label>Settlement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Shortfall_Amount__c</fullName>
        <label>Shortfall Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Shortfall_Authorised__c</fullName>
        <label>Shortfall Authorised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Shortfall_Proposed__c</fullName>
        <label>Shortfall Proposed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Shortfall_Sale_Approval__c</fullName>
        <label>Shortfall Sale Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Sold_Date__c</fullName>
        <label>Sold Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Solicitor_Appointed__c</fullName>
        <label>Solicitor Appointed</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Solicitor_Letter_Issued__c</fullName>
        <label>Solicitor’s Letter Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Split_Number__c</fullName>
        <description>This field is used for EDW.</description>
        <formula>IF( 
 AND(NOT(ISBLANK(  ScCollection_Contract__c  )),ScCollection_Contract__r.ScCollection_Source_System_Name__c == &quot;MORTGAGE&quot;)  
, 
TEXT( ScCollection_Contract__r.ScCollection_Contract_Split_Number__c ) 
, 
&quot;&quot; 
)</formula>
        <label>Split Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Time_to_lodge_defence__c</fullName>
        <label>Time to lodge defence</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Valuation_Amount__c</fullName>
        <label>Valuation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScCollection_Valuation_Date__c</fullName>
        <label>Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Valuer__c</fullName>
        <label>Valuer</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScCollection_Voluntary_Surrender__c</fullName>
        <label>Voluntary Surrender</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScCollection_Writ_Requested__c</fullName>
        <label>Writ Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScCollection_Write_Off_Amount__c</fullName>
        <label>Write Off Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tow_Costs__c</fullName>
        <inlineHelpText>Cost incurred arranging for an asset to be towed</inlineHelpText>
        <label>Tow Costs</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Recovery</label>
    <nameField>
        <displayFormat>RCI-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recoveries</pluralLabel>
    <recordTypes>
        <fullName>ScCollection_Mortgage_Recovery</fullName>
        <active>true</active>
        <label>Mortgage</label>
    </recordTypes>
    <recordTypes>
        <fullName>ScCollection_PAF_Recovery</fullName>
        <active>true</active>
        <label>PAF</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AgentClosedDateGreaterThanDateAppointed</fullName>
        <active>true</active>
        <description>Agent Close Date Should be greater than Date Appointed.</description>
        <errorConditionFormula>OR(AND(ISNULL(ScCollection_Date_Appointed__c),NOT(ISNULL(ScCollection_Agent_Close_Date__c))),ScCollection_Date_Appointed__c &gt; ScCollection_Agent_Close_Date__c)</errorConditionFormula>
        <errorDisplayField>ScCollection_Agent_Close_Date__c</errorDisplayField>
        <errorMessage>Agent Close Date Should be greater than Date Appointed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EitherReleaseOfAssetOrRedemptionDate</fullName>
        <active>true</active>
        <description>Both Release of Asset and Date of Redemption cannot be filled.</description>
        <errorConditionFormula>AND( NOT(ISNULL(ScCollection_Release_of_Asset__c)) , NOT(ISNULL(Date_of_Redemption__c)))</errorConditionFormula>
        <errorMessage>Both Release of Asset and Date of Redemption cannot be filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ReleaseOfAssetOrRedemptionDateGreater</fullName>
        <active>true</active>
        <description>Repossession date cannot be greater than Release of Asset or Date of Redemption.</description>
        <errorConditionFormula>OR(AND(ISNULL(ScCollection_Repossession_Date__c),OR(NOT(ISNULL(ScCollection_Release_of_Asset__c)) , NOT(ISNULL(Date_of_Redemption__c)))), ScCollection_Repossession_Date__c &gt;  ScCollection_Release_of_Asset__c ,ScCollection_Repossession_Date__c &gt;  Date_of_Redemption__c)</errorConditionFormula>
        <errorMessage>Release of Asset or Date of Redemption should be greater than Repossession Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RestrictMoreThanOneInProgressRecord</fullName>
        <active>true</active>
        <description>This rule is setup to restrict more than one in progress recovery record against property.</description>
        <errorConditionFormula>AND(ISNEW(), ScCollection_Property_Surrogate__r.Recovery_Record_Count__c &gt;= 1,  TEXT(ScCollection_Status__c) = &apos;In Progress&apos;)</errorConditionFormula>
        <errorMessage>You can&apos;t tag more than one in-progress recoveries against a property.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RestrictUpdationOfClosedRecovery</fullName>
        <active>true</active>
        <description>Validation for not being able to edit the record once the status is changed to &apos;Closed&apos;.</description>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(ScCollection_Status__c),&quot;Closed&quot;),NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>You cannot edit the record once the status is changed to &apos;Closed&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SoldDateGreaterThanReleaseOfAsset</fullName>
        <active>true</active>
        <description>Sold Date should be greater than Release of Asset Date.</description>
        <errorConditionFormula>OR(AND(ISNULL(ScCollection_Release_of_Asset__c),NOT(ISNULL(ScCollection_Sold_Date__c))),ScCollection_Release_of_Asset__c &gt; ScCollection_Sold_Date__c)</errorConditionFormula>
        <errorDisplayField>ScCollection_Sold_Date__c</errorDisplayField>
        <errorMessage>Sold Date should be greater than Release of Asset Date.</errorMessage>
    </validationRules>
</CustomObject>